--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -4,5 +4,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show.sql = true
 spring.datasource.url = jdbc:postgresql://192.168.10.120:5432/springboot
-spring.datasource.username = admin
-spring.datasource.password = admin
+spring.datasource.username = springboot
+spring.datasource.password = 12345
