--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,8 +1,8 @@
-user.role = paul
+user.role = sysadmin
 user.alias = paul
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show.sql = true
-spring.datasource.url = jdbc:postgresql://192.168.10.120:5432/springboot
+spring.datasource.url = jdbc:postgresql://postgres_db:5432/springboot
 spring.datasource.username = springboot
 spring.datasource.password = 12345
