--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,7 +1,7 @@
 user.role = sysadmin
 user.alias = paul
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show.sql = true
 spring.datasource.url = jdbc:postgresql://postgres_db:5432/springboot
